--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>     
     </div>
     <!-- js -->
-    <script src="./index.js"></script>
+    <script src="./tinh_diem_thi_tuyen.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 </body>
