--- a/index.html
+++ b/index.html
@@ -8,40 +8,66 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 </head>
 <body>
-    
-    <div class="container">
-        <h2 class="text-success text-center">TÍNH ĐIỂM THI TUYỂN</h2>
-        <div class="form-group">
-            <label for="">ĐIỂM MÔN 1</label>
-            <input type="text" name="" id="mark1" class="form-control">
+    <div class="row">
+        <div class="col-sm-6 col-lg-6">
+            <div class="container">
+                <h2 class="text-success text-center">TÍNH ĐIỂM THI TUYỂN</h2>
+                <div class="form-group">
+                    <label for="">ĐIỂM MÔN 1</label>
+                    <input type="text" name="" id="mark1" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">ĐIỂM MÔN 2</label>
+                    <input type="text" name="" id="mark2" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">ĐIỂM MÔN 3</label>
+                    <input type="text" name="" id="mark3" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">KHU VỰC</label>
+                    <input type="text" name="" id="district" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">ĐỐI TƯỢNG</label>
+                    <input type="text" name="" id="subject" class="form-control">
+                </div>
+                <div class="text-center">
+                    <button class="btn btn-success" id="submit">SUBMIT</button>
+                </div>
+                <div
+                style="display: none; margin-top: 20px;"
+                class="alert alert-success"
+                id="result">
+                </div>     
+            </div>
         </div>
-        <div class="form-group">
-            <label for="">ĐIỂM MÔN 2</label>
-            <input type="text" name="" id="mark2" class="form-control">
+        <div class="col-sm-6 col-lg-6">
+            <div class="container">
+                <h2 class="text-danger text-center">TÍNH TIỀN ĐIỆN</h2>
+                <div class="form-group">
+                  <label for="">Họ và tên</label>
+                  <input type="text" name="" id="fullname" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">Số Kw</label>
+                    <input type="text" name="" id="kw" class="form-control">
+                </div>
+                <div class="text-center">
+                    <button class="btn btn-danger" id="submit2">submit</button>
+                  </div>
+                <div
+                style="display: none; margin-top: 20px;"
+                class="alert alert-danger"
+                id="result2">
+                </div>    
+            </div>
         </div>
-        <div class="form-group">
-            <label for="">ĐIỂM MÔN 3</label>
-            <input type="text" name="" id="mark3" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="">KHU VỰC</label>
-            <input type="text" name="" id="district" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="">ĐỐI TƯỢNG</label>
-            <input type="text" name="" id="subject" class="form-control">
-        </div>
-        <div class="text-center">
-            <button class="btn btn-success" id="submit">SUBMIT</button>
-        </div>
-        <div
-        style="display: none; margin-top: 20px;"
-        class="alert alert-success"
-        id="result">
-        </div>     
     </div>
+    
     <!-- js -->
     <script src="./tinh_diem_thi_tuyen.js"></script>
+    <script src="./tinh_tien_dien.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 </body>
